// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Textarea is matches snapshot 1`] = `
<textarea id="Input"
          part="input"
>
</textarea>
<label for="Input"
       part="label-wrapper"
>
  <slot name="label"
        part="label"
  >
  </slot>
  <slot name="required"
        part="required"
  >
    *
  </slot>
</label>
<slot name="helperText"
      part="helper-text"
>
</slot>
<slot name="validationText"
      part="validation-text"
>
</slot>
<slot part="content">
</slot>
`;

exports[`Input Textarea is matches snapshot when disabled 1`] = `
<textarea id="Input"
          part="input"
          disabled
>
</textarea>
<label for="Input"
       part="label-wrapper"
>
  <slot name="label"
        part="label"
  >
  </slot>
  <slot name="required"
        part="required"
  >
    *
  </slot>
</label>
<slot name="helperText"
      part="helper-text"
>
</slot>
<slot name="validationText"
      part="validation-text"
>
</slot>
<slot part="content">
</slot>
`;

exports[`Input Textarea is matches snapshot when disabled toggled on/off 1`] = `
<textarea id="Input"
          part="input"
>
</textarea>
<label for="Input"
       part="label-wrapper"
>
  <slot name="label"
        part="label"
  >
  </slot>
  <slot name="required"
        part="required"
  >
    *
  </slot>
</label>
<slot name="helperText"
      part="helper-text"
>
</slot>
<slot name="validationText"
      part="validation-text"
>
</slot>
<slot part="content">
</slot>
`;
